--- a/config/locales/jpn/models.yml
+++ b/config/locales/jpn/models.yml
@@ -918,6 +918,7 @@ jpn:
     # prescriptions: "Ordonnances"
     # prescriptor: "Vétérinaire"
     # pretax_amount: "Montant HT"
+    # pretax_amount_generation: "Pretax amount generation"
     # price: "Prix"
     # price_amount: "Montant HT"
     # prices: "Prix"
@@ -1354,7 +1355,6 @@ jpn:
     company:
       # cant_find_document_template: "Impossible de trouver le modèle de document correspondant"
       default:
-        # category: "Par défaut"
         delays:
           expression:
             # expiration: "1 mois"
@@ -1555,6 +1555,9 @@ jpn:
         # rent: "Location"
         # sales: "Vente"
     product_nature_price: #?
+    product_price_listing:
+      default:
+        # name: "Par défaut"
     product_price_template:
       # label: "%{product} / %{amount} %{currency}"
       # no_range: "Pas d’intervalle"
