--- a/config/locales/spa/models.yml
+++ b/config/locales/spa/models.yml
@@ -1610,7 +1610,8 @@ spa:
       # tracking: "N°Lot\_: %{serial}"
       # warehouse_can_not_transfer_product: "Le produit %{product} ne peut être sorti du réservoir %{warehouse}, celui-ci contient %{contained_product} "
     sale_nature:
-      # sale_nature_name: "Vente standard"
+      default:
+        # name: "Vente standard"
     sequence:
       default:
         assets:
