--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -299,6 +299,8 @@ jpn:
       # index: "Lots de produits"
       # new: "Créer un lot"
       # show: "Lot\_: %{name}"
+    backend/product_indicator_choices: #?
+    backend/product_indicator_data: #?
     backend/product_indicator_nature_choices: #?
     backend/product_indicator_natures: #?
     backend/product_indicators: #?
