--- a/config/locales/spa/models.yml
+++ b/config/locales/spa/models.yml
@@ -725,6 +725,8 @@ spa:
     # incoming_payment_modes: "Modes d’encaissement"
     # incoming_payment_uses: "Parties d’encaissement"
     # incoming_payments: "Encaissements"
+    # indicator: "Indicator"
+    # indicator_data: "Indicator data"
     # indicators: "Indicators"
     # indirect_links: "Liens indirects"
     # indivisible: "Indivisible"
