begin to work on relation between products and indicators

--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -331,19 +331,19 @@ fra:
       new: "Créer un lot"
       show: "Lot\_: %{name}"
     backend/product_indicator_choices:
-      # edit: "Edit backend/product indicator choice"
-      # new: "New backend/product indicator choice"
+      edit: "Modifier une liste de choix pour un indicateur"
+      new: "Nouvelle liste de choix pour un indicateur"
     backend/product_indicator_data:
-      # edit: "Edit backend/product indicator datum"
-      # index: "Index backend/product indicator datum"
-      # new: "New backend/product indicator datum"
-      # show: "Show backend/product indicator datum"
+      edit: "Modifier la valeur d'un indicateur"
+      index: "Indicateurs Produits"
+      new: "Nouvelle valeur d'indicateur pour un produit"
+      show: "Valeurs"
     backend/product_indicators:
-      # edit: "Edit backend/product indicator"
-      # index: "Index backend/product indicator"
-      # new: "New backend/product indicator"
-      # show: "Show backend/product indicator"
-      # sort: "Sort backend/product indicator"
+      edit: "Modifier l'indicateur\_: %{name}"
+      index: "Indicateurs"
+      new: "Nouvel indicateur"
+      show: "Indicateur %{name}"
+      sort: "Trier"
     backend/product_links:
       # edit: "Edit backend/product link"
       # index: "Index backend/product link"
@@ -820,6 +820,7 @@ fra:
     check_fields: "Vous devez cocher au moins une case pour effectuer la modification"
     childrens: "Enfants"
     choices: "Choix"
+    choice_options: "Indicateur avec liste de choix"
     choose_mail_column: "Veuillez choisir la colonne à utiliser pour le mailing"
     city_name: "Ville"
     click_to_mail: "Écrire votre message avec votre propre messagerie électronique"
@@ -879,6 +880,7 @@ fra:
     dates: "Saisissez les dates de début et de fin de la période"
     debit: "Débit"
     decimal_case: "Options pour un décimal"
+    decimal_options: "Indicateur de type décimal"
     default_subject: "[%{company}]"
     delay: "Délais"
     delay_update: "Modifier le délai"
@@ -1077,6 +1079,7 @@ fra:
     mandates_new_fields: "Vous devez saisir au moins une valeur dans l’un des champs de modification"
     manual_period: "du %{start} au %{finish}"
     map: "Carte"
+    measure_options: "Indicateur de type mesure"
     medical_informations: "Informations médicales"
     meeting: "Lieu(x) de rencontre"
     menus:
@@ -1424,6 +1427,7 @@ fra:
     stocks_preferences: "Gestion des stocks"
     stop: "Jusqu’au"
     string_case: "Options pour le texte"
+    string_options: "Indicateur de type Texte"
     subject: "Sujet"
     submit: "Envoyer"
     subscriber_period: "Abonné(e) le %{subscribed_on}"
@@ -1565,6 +1569,10 @@ fra:
       one: "%{count} encaissement"
       other: "%{count} encaissements"
       zero: "0 encaissement"
+    x_indicators:
+      one: "%{count} indicateur"
+      other: "%{count} indicateurs"
+      zero: "0 indicateur"
     x_items_remain_on_y:
       one: "%{count} élément restant."
       other: "%{count} éléments non visibles. Affinez votre recherche."
