--- a/config/locales/eng/models.yml
+++ b/config/locales/eng/models.yml
@@ -238,6 +238,10 @@ eng:
         # contains_blank_line: "%{attribute} contient une ligne vide"
         # contains_blank_page: "%{attribute} contient une page vide"
         currency_does_not_match: "The currency of the %{attribute} is different from %{currency}"
+        # custom_field_is_greater_than: "%{field} est trop grand (%{maximum} maximum)"
+        # custom_field_is_less_than: "%{field} est trop petit (%{minimum} minimum)"
+        # custom_field_is_required: "%{field} doit être renseigné"
+        # custom_field_is_too_long: "%{field} est trop long (%{length} caractères)"
         empty: "%{attribute} can't be empty"
         # entry_has_been_already_validated: "La pièce a été validée et ne peut plus être modifiée"
         equal_to: "%{attribute} must be equal to %{count}"
@@ -272,11 +276,11 @@ eng:
         cash:
           currency_does_not_match: "The currency of the %{journal} is different from that specified for the cash"
           unvalid_bban: "Unvalid BBAN. One or more elements are incorrect."
-        custom_field_datum:
-          greater_than: "%{field} is greater than %{maximum}"
-          less_than: "%{field} is less than %{minimum}"
-          required: "%{field} is required"
-          too_long: "%{field} is too long (%{length} characters)"
+        custom_field_datum:  #?
+          greater_than: "%{field} is greater than %{maximum}" #?
+          less_than: "%{field} is less than %{minimum}" #?
+          required: "%{field} is required" #?
+          too_long: "%{field} is too long (%{length} characters)" #?
         deposit:
           must_be_a_bank_account: "%{field} must be a bank account and not a cash"
         entity:
@@ -393,7 +397,7 @@ eng:
       cultivation: "Cultivation" #?
       custom_field: "Complement field"
       custom_field_choice: "Complement field choice"
-      custom_field_datum: "Complement datum"
+      custom_field_datum: "Complement datum" #?
       delay: "Delay"
       department: "Department"
       deposit: "Deposit"
@@ -671,7 +675,7 @@ eng:
     current_financial_year: "Current financial year"
     custom_field: "Custom field"
     custom_field_choices: "Custom field choices"
-    custom_field_data: "Custom field data"
+    custom_field_data: "Custom field data" #?
     custom_fields: "Custom fields"
     customized: "Customized"
     customized_type: "Customized type"
@@ -1356,7 +1360,8 @@ eng:
         date: "Date"
         datetime: "Date and time"
         decimal: "Decimal"
-        string: "Text"
+        string: "Text" #?
+        # text: "Texte"
     document_template:
       family:
         accountancy: "Accountancy"
