--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -741,6 +741,7 @@ fra:
     add_quickly_an_item: "Ajouter rapidement une ligne de produit"
     add_subscription_for_sale_line: "Ajouter un abonnement pour la ligne N°%{position}"
     add_treatment: "Ajouter un traitement"
+    add_watching: "Ajouter un produit de référence"
     add_website: "Ajouter un site Web"
     add_x: "Ajouter «\_%{x}\_»"
     add_x_html: "Ajouter «\_%{x}\_»"
@@ -818,8 +819,8 @@ fra:
     check: "Vérifier"
     check_fields: "Vous devez cocher au moins une case pour effectuer la modification"
     childrens: "Enfants"
-    choices: "Choix"
     choice_options: "Indicateur avec liste de choix"
+    choices: "Choix"
     choose_mail_column: "Veuillez choisir la colonne à utiliser pour le mailing"
     city_name: "Ville"
     click_to_mail: "Écrire votre message avec votre propre messagerie électronique"
@@ -1323,6 +1324,7 @@ fra:
     relationship: "Gestion des relations clients/fournisseurs"
     remove_diagnostic: "Supprimer un diagnostic"
     remove_treatment: "Supprimer un traitement"
+    remove_watching: "Supprimer un produit de référence"
     reopen: "Déclôturer"
     reopen_journal: "Déclôturer le journal"
     report: "Informations communes"
