--- a/config/locales/arb/models.yml
+++ b/config/locales/arb/models.yml
@@ -28,6 +28,9 @@ arb:
         # journal_entry_item: "Ligne comptable concernée"
         # product_nature: "Type de produit concerné"
         # repartition_percentage: "Pourcentage d'affectation"
+      activity_watching:
+        # product_nature: "Produit de référence"
+        # work_unit: "Unité d'oeuvre"
       animal:
         # born_at: "Date de naissance"
         # variety: "Race"
@@ -1814,7 +1817,7 @@ arb:
         # service: "Service"
         # vegetal: "Culture annuelle"
       nature:
-        # ancillary: "Auxiliaire"
+        # auxiliary: "Auxiliaire"
         # main: "Principal"
         # none: "Aucun"
     animal: #?
@@ -1923,6 +1926,17 @@ arb:
         # sale: "Vente"
       income_reasons: #?
       outgone_reasons: #?
+    product_indicator:
+      nature:
+        # boolean: "Case à cocher"
+        # choice: "Liste de choix"
+        # decimal: "Chiffre (décimal)"
+        # measure: "Mesure"
+        # string: "Texte"
+      usage:
+        # environment: "Environnement"
+        # life: "Biologique"
+        # production: "Production"
     product_localization:
       arrival_cause:
         # birth: "Naissance"
