--- a/config/locales/eng/models.yml
+++ b/config/locales/eng/models.yml
@@ -15,6 +15,9 @@ eng:
         # journal_entry_item: "Ligne comptable concernée"
         # product_nature: "Type de produit concerné"
         # repartition_percentage: "Pourcentage d'affectation"
+      activity_watching:
+        # product_nature: "Produit de référence"
+        # work_unit: "Unité d'oeuvre"
       animal:
         # born_at: "Date de naissance"
         race: "Race" #?
@@ -1336,7 +1339,7 @@ eng:
         # service: "Service"
         # vegetal: "Culture annuelle"
       nature:
-        # ancillary: "Auxiliaire"
+        # auxiliary: "Auxiliaire"
         # main: "Principal"
         # none: "Aucun"
     animal: #?
@@ -1448,6 +1451,17 @@ eng:
         # sale: "Vente"
       income_reasons: #?
       outgone_reasons: #?
+    product_indicator:
+      nature:
+        # boolean: "Case à cocher"
+        # choice: "Liste de choix"
+        # decimal: "Chiffre (décimal)"
+        # measure: "Mesure"
+        # string: "Texte"
+      usage:
+        # environment: "Environnement"
+        # life: "Biologique"
+        # production: "Production"
     product_localization:
       arrival_cause:
         # birth: "Naissance"
