--- a/config/locales/jpn/models.yml
+++ b/config/locales/jpn/models.yml
@@ -15,6 +15,9 @@ jpn:
         # journal_entry_item: "Ligne comptable concernée"
         # product_nature: "Type de produit concerné"
         # repartition_percentage: "Pourcentage d'affectation"
+      activity_watching:
+        # product_nature: "Produit de référence"
+        # work_unit: "Unité d'oeuvre"
       animal:
         # born_at: "Date de naissance"
         # variety: "Race"
@@ -1164,7 +1167,7 @@ jpn:
         # service: "Service"
         # vegetal: "Culture annuelle"
       nature:
-        # ancillary: "Auxiliaire"
+        # auxiliary: "Auxiliaire"
         # main: "Principal"
         # none: "Aucun"
     animal: #?
@@ -1274,6 +1277,17 @@ jpn:
         # sale: "Vente"
       income_reasons: #?
       outgone_reasons: #?
+    product_indicator:
+      nature:
+        # boolean: "Case à cocher"
+        # choice: "Liste de choix"
+        # decimal: "Chiffre (décimal)"
+        # measure: "Mesure"
+        # string: "Texte"
+      usage:
+        # environment: "Environnement"
+        # life: "Biologique"
+        # production: "Production"
     product_localization:
       arrival_cause:
         # birth: "Naissance"
