Working on milk analysis import via demo task

--- a/config/locales/fra/models.yml
+++ b/config/locales/fra/models.yml
@@ -1760,5 +1760,6 @@ fra:
         m: "Mètre"
         m2: "Mètre carré"
         m3: "Mètre cube"
+        ml: "Millilitre"
         t: "Tonne"
         u: "Unité"
