first working version of milk_analysis import in rake demo task

--- a/config/locales/arb/models.yml
+++ b/config/locales/arb/models.yml
@@ -2690,6 +2690,7 @@ arb:
       default:
         # a: "Are"
         # ca: "Centiare (m²)"
+        # g: "Gramme"
         # ha: "Hectare"
         # hl: "Hectolitre"
         # kg: "Kilogramme"
@@ -2698,6 +2699,7 @@ arb:
         # m: "Mètre"
         # m2: "Mètre carré"
         # m3: "Mètre cube"
+        # ml: "Millilitre"
         # t: "Tonne"
         # u: "Unité"
     user:  #?
