--- a/config/locales/jpn/models.yml
+++ b/config/locales/jpn/models.yml
@@ -1705,6 +1705,7 @@ jpn:
       default:
         # a: "Are"
         # ca: "Centiare (m²)"
+        # g: "Gramme"
         # ha: "Hectare"
         # hl: "Hectolitre"
         # kg: "Kilogramme"
@@ -1713,5 +1714,6 @@ jpn:
         # m: "Mètre"
         # m2: "Mètre carré"
         # m3: "Mètre cube"
+        # ml: "Millilitre"
         # t: "Tonne"
         # u: "Unité"
