--- a/config/locales/eng/models.yml
+++ b/config/locales/eng/models.yml
@@ -1975,6 +1975,7 @@ eng:
       default:
         a: "Are"
         ca: "Centiare (m²)"
+        # g: "Gramme"
         ha: "Hectare"
         hl: "Hectolitre"
         kg: "Kilogram"
@@ -1983,5 +1984,6 @@ eng:
         m: "Metre"
         # m2: "Mètre carré"
         m3: "Cubic metre"
+        # ml: "Millilitre"
         t: "Ton"
         u: "Unit"
