--- a/README.rdoc
+++ b/README.rdoc
@@ -8,6 +8,29 @@ More details can be found at in the doc directory or on the official website htt
 You can learn how to contribute in Ekylibre by following our official guide
 https://github.com/ekylibre/ekylibre/wiki/Une-semaine-en-Ekylibre
 
+== Installation
+This a short explanation on installation steps:
+* Before all, install all distribution dependencies:
+    aptitude install postgresql-9.1 postgresql-server-dev-9.1 libpq-dev tesseract-ocr tesseract-ocr-fra tesseract-ocr-eng tesseract-spa graphicsmagick pdftk openjdk-6-jdk libreoffice libxml2-dev libxlst1-dev poppler-utils poppler-data ghostscript libgdal1-dev libjson0-dev build-essential wget zlib1g-dev
+* Install PostGIS >= 2.0:
+  * Download and install Geos (~> 3.3.8) from http://trac.osgeo.org/geos/
+      wget http://download.osgeo.org/geos/geos-3.3.8.tar.bz2 && tar xjvf geos-3.3.8.tar.bz2 && cd geos-3.3.8 && ./configure && make && sudo make install
+  * Download and install Proj4 (~> 4.8) from http://trac.osgeo.org/proj/
+      wget http://download.osgeo.org/proj/proj-4.8.0.tar.gz && tar xzvf proj-4.8.0.tar.gz && cd proj-4.8.0 && ./configure && make && sudo make install
+  * Download and install PostGIS (~> 2.0) from http://postgis.net/
+      wget http://download.osgeo.org/postgis/source/postgis-2.0.3.tar.gz && tar xzvf postgis-2.0.3.tar.gz && cd postgis-2.0.3 && ./configure && make && sudo make install
+* After, install Ruby 1.9.3 or later. If your distribution isn't up-to-date, see {RVM}[https://rvm.io] or {RBenv}[https://github.com/sstephenson/rbenv] to install the good version, else:
+    aptitude install ruby1.9.1 ruby1.9.1-dev
+* Configure a normal user for DB and an admin user for PostgreSQL which can add PostGIS extension and updates config/database.yml
+* Install bundler with rubygems
+    gem install bundler
+* Move to Ekylibre directory root and install gems with bundler:
+    JAVA_HOME=/usr/lib/jvm/java-6-openjdk bundle install
+* Create and migrate database:
+    rake db:create db:migrate && rake db:seed
+* Launch server:
+    rails server
+
 == Contributing
 
 We encourage you to contribute to Ekylibre.
