--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -24,6 +24,7 @@ jpn:
       # new: "Nouvelle répartition analytique"
       # show: "Répartition %{id}"
     backend/activity_watchings: #?
+    backend/animal_groups: #?
     backend/animals:
       # edit: "Modifier l'animal\_: %{name}"
       # index: "Productions animales"
@@ -221,6 +222,7 @@ jpn:
       # reopen: "Déclôturer le journal\_: %{name}"
       # reports: "Impression, exportation"
       # show: "Journal\_: %{name} (%{code})"
+    backend/land_parcel_groups: #?
     backend/land_parcels:
       # divide: "Diviser la parcelle\_: %{name}"
       # edit: "Modifier la parcelle\_: %{name}"
