--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -31,6 +31,7 @@ arb:
       # new: "Nouvelle répartition analytique"
       # show: "Répartition %{id}"
     backend/activity_watchings: #?
+    backend/animal_groups: #?
     backend/animals:
       # edit: "Modifier l'animal\_: %{name}"
       # index: "Productions animales"
@@ -272,6 +273,7 @@ arb:
       reopen: "فتح %{name}"
       # reports: "Impression, exportation"
       show: "الدفتر اليومي : %{name} (%{code})"
+    backend/land_parcel_groups: #?
     backend/land_parcels:
       # divide: "Diviser la parcelle\_: %{name}"
       edit: "تعديل النظام : %{name}"
