--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -701,6 +701,7 @@ fra:
         one: "%{count} erreur a empêché l’enregistrement (%{model})"
         other: "%{count} erreurs ont empêché l’enregistrement (%{model})"
   labels:
+    search_placeholder: "Rechercher..."
     account_accruals: "Comptes de régularisation"
     account_attorney_to_create: "-- Créer automatiquement un compte mandataire --"
     account_claims_assets: "Créances"
