--- a/config/locales/eng/models.yml
+++ b/config/locales/eng/models.yml
@@ -22,7 +22,8 @@ eng:
         # born_at: "Date de naissance"
         race: "Race" #?
         # variety: "Race"
-      animal_group: #?
+      animal_group:
+        # born_at: "Date de création"
       animal_race: #?
       animal_treatment_use: #?
       asset_depreciation:
@@ -94,6 +95,11 @@ eng:
         # born_at: "Date de création"
         children: "Sub-plots"
         number: "CAP Number or plot number"
+      land_parcel_group:
+        # area_measure: "Surface"
+        # born_at: "Date de création"
+        # children: "Sous-îlots"
+        # identification_number: "Numéro PAC ou numéro d'ilôts"
       mandate:
         family: "Family"
       matter:
@@ -387,7 +393,7 @@ eng:
       animal_drug_nature: "Animal drug type" #?
       animal_event: "Animal event" #?
       animal_event_nature: "Animal event type" #?
-      animal_group: "Animal group" #?
+      animal_group: "Animal group"
       animal_posology: "Animal posology" #?
       animal_prescription: "Animal prescription" #?
       animal_race: "Animal race" #?
@@ -397,6 +403,7 @@ eng:
       asset: "Asset"
       asset_depreciation: "Asset depreciation"
       bank_statement: "Bank statement"
+      # bioproduct: "Produit vivant"
       building: "Building"
       # campaign: "Campagne"
       cash: "Cash"
@@ -428,6 +435,7 @@ eng:
       event: "Event"
       event_nature: "Event type"
       financial_year: "Financial year"
+      # fungus: "Champignon"
       incoming_delivery: "Purchase delivery"
       incoming_delivery_item: "Purchase delivery line"
       incoming_delivery_line: "Purchase delivery line" #?
@@ -443,7 +451,8 @@ eng:
       journal_entry_item: "Journal entry line"
       journal_entry_line: "Journal entry line" #?
       land_parcel: "Land parcel"
-      land_parcel_group: "Land parcel group" #?
+      # land_parcel_division: "Division de parcelle"
+      land_parcel_group: "Land parcel group"
       land_parcel_kinship: "Land parcel kinship" #?
       listing: "Listing"
       listing_node: "Listing node"
@@ -464,6 +473,7 @@ eng:
       outgoing_payment: "Disbursement"
       outgoing_payment_mode: "Disbursement mode"
       outgoing_payment_use: "Disbursement part" #?
+      # plant: "Plante"
       preference: "Preference"
       price: "Price" #?
       product: "Animal"
@@ -1482,12 +1492,12 @@ eng:
         # exterior: "Sortie"
         # interior: "Entrée"
         # transfer: "Transfert"
-    product_nature:
-      nature:
-        product: "Product"
-        service: "Service"
-        subscription: "Subcription"
-        transfer: "Transfer"
+    product_nature:  #?
+      nature: #?
+        product: "Product" #?
+        service: "Service" #?
+        subscription: "Subcription" #?
+        transfer: "Transfer" #?
     product_transfer:
       nature:
         gain: "Gain"
@@ -1527,6 +1537,7 @@ eng:
     sex:
       female: "Female"
       male: "Male"
+      # mixt: "Mixte"
     stock_transfer:
       nature:
         gain: "Gain"
