--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -512,6 +512,8 @@ fra:
       edit: "Configuration"
       import: "Importer des données"
       restore: "Restaurer une sauvegarde"
+    backend/snippets:
+      # toggle: "Toggle backend/snippet"
     backend/subscription_natures:
       edit: "Modifier le type d’abonnement\_: %{name}"
       index: "Types d’abonnements"
@@ -672,6 +674,7 @@ fra:
     backend/sales: "Ventes"
     backend/sequences: "Séquences"
     backend/settings: "Paramètres"
+    # backend/snippets: "Backend/snippets"
     backend/subscription_natures: "Types d’abonnements"
     backend/subscriptions: "Abonnements"
     backend/tax_declarations: "Déclaration de TVA"
@@ -1703,6 +1706,8 @@ fra:
     need_quantities_to_cancel_an_sale: "Vous devez spécifier une quantité pour pouvoir faire un avoir"
     need_stocks_building_to_create_products: "Vous devez créer un lieu de stockage pour pouvoir créer un produit" #?
     need_stocks_to_create_inventories: "Vous devez gérer les stocks d’au moins un produit pour pouvoir faire un inventaire"
+    # need_to_create_activities: "Need to create activities"
+    need_to_create_activity: "Vous devez créer des activités pour pouvoir affecter vos écritures comptables" #?
     need_to_create_subscription_nature: "Vous devez créer un type d’abonnement pour pouvoir gérer vos abonnements"
     new_actual_number: "Le nouveau numéro en cours est %{actual_number}"
     no_authenticated: "Vous n’avez pas pu être identifié. Le nom d’utilisateur ou le mot de passe doit être incorrect."
