--- a/config/locales/jpn/models.yml
+++ b/config/locales/jpn/models.yml
@@ -21,7 +21,8 @@ jpn:
       animal:
         # born_at: "Date de naissance"
         # variety: "Race"
-      animal_group: #?
+      animal_group:
+        # born_at: "Date de création"
       animal_race: #?
       animal_treatment_use: #?
       asset_depreciation:
@@ -80,8 +81,13 @@ jpn:
       land_parcel:
         # area_measure: "Surface"
         # born_at: "Date de création"
-        # children: "Sous-îlots"
+        # children: "Sous-parcelle"
         # number: "Numéro PAC ou numéro de parcelle"
+      land_parcel_group:
+        # area_measure: "Surface"
+        # born_at: "Date de création"
+        # children: "Sous-îlots"
+        # identification_number: "Numéro PAC ou numéro d'ilôts"
       mandate:
         # family: "Famille"
       matter:
@@ -324,10 +330,12 @@ jpn:
       # activity: "Activité"
       # affair: "Affaire"
       # animal: "Animal"
+      # animal_group: "Groupe d'animaux"
       # area: "Zone postale"
       # asset: "Immobilisation"
       # asset_depreciation: "Amortissement d’immobilisation"
       # bank_statement: "Relevé de compte bancaire"
+      # bioproduct: "Produit vivant"
       # building: "Lieu de stockage"
       # campaign: "Campagne"
       # cash: "Trésorerie"
@@ -352,6 +360,7 @@ jpn:
       # event: "Évènement"
       # event_nature: "Type d’évènement"
       # financial_year: "Exercice"
+      # fungus: "Champignon"
       # incoming_delivery: "Arrivage"
       # incoming_delivery_item: "Ligne d’arrivage"
       # incoming_delivery_mode: "Mode d’arrivage"
@@ -364,7 +373,9 @@ jpn:
       # journal: "Journal"
       # journal_entry: "Écriture"
       # journal_entry_item: "Ligne d’écriture"
-      # land_parcel: "Îlot"
+      # land_parcel: "Parcelle"
+      # land_parcel_division: "Division de parcelle"
+      # land_parcel_group: "Ilôt"
       # listing: "Extraction"
       # listing_node: "Nœud d’extraction"
       # listing_node_item: "Élément de nœud d’extraction"
@@ -378,6 +389,7 @@ jpn:
       # outgoing_delivery_mode: "Mode de livraison"
       # outgoing_payment: "Décaissement"
       # outgoing_payment_mode: "Mode de décaissement"
+      # plant: "Plante"
       # preference: "Préférence"
       # product: "Produits"
       # product_group: "Groupe de produit"
@@ -1308,12 +1320,8 @@ jpn:
         # exterior: "Sortie"
         # interior: "Entrée"
         # transfer: "Transfert"
-    product_nature:
-      nature:
-        # product: "Produit"
-        # service: "Service"
-        # subscription: "Abonnement"
-        # transfer: "Transfert"
+    product_nature:  #?
+ #?
     product_transfer:
       nature:
         # gain: "Gain"
@@ -1353,6 +1361,7 @@ jpn:
     sex:
       # female: "Femelle"
       # male: "Mâle"
+      # mixt: "Mixte"
     stock_transfer:
       nature:
         # gain: "Gain"
